fixed: aligned profile margin

--- a/Design/TuTangleResponsive/css/responsive.css
+++ b/Design/TuTangleResponsive/css/responsive.css
@@ -117,6 +117,7 @@
         display: block;
         float: right;
         clear: none;
+        margin-right: 0;
     }
     .search {
         display: block;
